Enable deployment with Jumbo Frames
Closes: #39

Signed-off-by: Sai Sindhur Malleni <smalleni@redhat.com>

--- a/ansible-ipi-install/roles/shared-labs-prep/templates/ocp4-lab.dnsmasq.conf.j2
+++ b/ansible-ipi-install/roles/shared-labs-prep/templates/ocp4-lab.dnsmasq.conf.j2
@@ -7,6 +7,9 @@ expand-hosts
 except-interface=lo
 except-interface={{ lab_pub_nic }}
 interface=baremetal
+{% if jumbo_mtu %}
+dhcp-option=baremetal,26,9000
+{% endif %}
 dhcp-range={{ extcidrnet | next_nth_usable(10) }},{{ extcidrnet | ipaddr('last_usable') }}
 dhcp-no-override
 dhcp-authoritative
