added else condition

--- a/ansible-ipi-install/roles/bootstrap/templates/node_inv.j2
+++ b/ansible-ipi-install/roles/bootstrap/templates/node_inv.j2
@@ -9,7 +9,7 @@
          "pm_addr": "{{ key.pm_addr }}",
          "pm_password": "{{ key.pm_password }}",
          "pm_user": "{{ key.pm_user }}"
-      }{{ "," if not loop.last }}
+      }{{ "," if not loop.last else "" }}
 {%- endfor %}
       ]
 }
