--- a/ansible-ipi-install/roles/bootstrap/templates/node_inv.j2
+++ b/ansible-ipi-install/roles/bootstrap/templates/node_inv.j2
@@ -3,7 +3,7 @@
 {% for key in ocp_node_content| json_query(query) -%}
       {
          "ext_ip": "{{ extcidrnet | next_nth_usable(loop.index0 + 10 + ip_nth|default(0)|int) }}",
-         "host_name": {% if node == 'worker' %}"worker{{ '%03d' % (loop.index0 + wrkr_index|default(0)|int) }}"{% else %}"master-{{ loop.index0 }}"{% endif %},
+         "host_name": {% if node == 'worker' %}"worker{{ '%03d' % (loop.index0 + wrkr_index|default(0)|int) }}-{{ key.pm_addr.split('.')[0].split('-')[4] if lab_name == 'scale' else key.pm_addr.split('.')[0].split('-')[3] }}"{% else %}"master-{{ loop.index0 }}"{% endif %},
          "bm_mac": "{{ key.mac[2] }}",
          "prov_mac": "{{ key.mac[1] }}",
          "pm_addr": "{{ key.pm_addr }}",
