--- a/ansible-ipi-install/roles/scale-worker/templates/bare-metal-host.yaml.j2
+++ b/ansible-ipi-install/roles/scale-worker/templates/bare-metal-host.yaml.j2
@@ -2,13 +2,13 @@
 apiVersion: metal3.io/v1alpha1
 kind: BareMetalHost
 metadata:
-  name: worker-{{ ansible_loop.index0 + scale_worker_index | int }}
+  name: {{ item.host_name }}
   namespace: openshift-machine-api
 spec:
   online: true
   bmc:
     address: "ipmi://{{ item.pm_addr }}:623"
-    credentialsName: "worker-{{ ansible_loop.index0 + scale_worker_index | int }}-bmc-secret"
+    credentialsName: "{{ item.host_name }}-bmc-secret"
   hardwareProfile: unknown
   bootMACAddress: "{{ item.prov_mac }}"
 {% if bootmode is defined and bootmode == 'legacy' %}
