Dual-Stack PR after rebasing with upstream
Signed-off-by: Sai Sindhur Malleni <smalleni@redhat.com>

--- a/ansible-ipi-install/roles/shared-labs-prep/templates/ocp4-lab.dnsmasq.conf.j2
+++ b/ansible-ipi-install/roles/shared-labs-prep/templates/ocp4-lab.dnsmasq.conf.j2
@@ -13,6 +13,10 @@ dhcp-option=baremetal,26,9000
 dhcp-range={{ extcidrnet | next_nth_usable(10) }},{{ extcidrnet | ipaddr('last_usable') }}
 dhcp-no-override
 dhcp-authoritative
+{% if (ipv6_enabled and dualstack_baremetal) and not (ipv4_baremetal) %}
+dhcp-range={{ extcidrnet6 | next_nth_usable(10) }},{{ extcidrnet6 | ipaddr('last_usable') }}
+enable-ra
+{% endif %}
 {% for node in ocp_deploying_node_content.nodes %}
 dhcp-host={{ node.bm_mac }},{{ node.ext_ip }},{{ node.host_name }}
 {% endfor %}
