--- a/ansible-ipi-install/roles/shared-labs-prep/templates/ocp4-lab.machineconfig.yml.j2
+++ b/ansible-ipi-install/roles/shared-labs-prep/templates/ocp4-lab.machineconfig.yml.j2
@@ -8,10 +8,12 @@ metadata:
 spec:
   config:
     ignition:
-{% if ((version.split('.')[0]|int == 4 or version.split('.')[0] == 'latest-4') and (version.split('.')[1]|int < 6)) %}
+{% if (version.split('.')[0]|int == 4 or version.split('.')[0] == 'latest-4' or version.split('.')[0] == 'stable-4') %}
+{% if (version.split('.')[1]|int < 6) %}
       version: 2.2.0
-{% elif ((version.split('.')[0]|int == 4 or version.split('.')[0] == 'latest-4') and (version.split('.')[1]|int >= 6)) %}
+{% elif (version.split('.')[1]|int >= 6) %}
       version: 3.1.0
+{% endif %}
 {% endif %}
     storage:
       files:
@@ -21,4 +23,11 @@ spec:
         filesystem: root
         mode: 0644
         path: /etc/sysconfig/network-scripts/ifcfg-{{ nic }}
+{% if (version.split('.')[1]|int >= 8) %}
+      - contents:
+          source: data:text/plain;charset=utf-8;base64,{{ lookup('template', 'ocp4-lab.nm.conf.j2', template_vars=dict(item=nic)) | b64encode }}
+        filesystem: root
+        mode: 0644
+        path: /etc/NetworkManager/conf.d/99-disable-nics-{{ nic }}.conf
+{% endif %}
 {% endfor %}
