--- a/ansible-ipi-install/roles/shared-labs-prep/templates/ocp4-lab.machineconfig.yml.j2
+++ b/ansible-ipi-install/roles/shared-labs-prep/templates/ocp4-lab.machineconfig.yml.j2
@@ -23,11 +23,11 @@ spec:
         filesystem: root
         mode: 0644
         path: /etc/sysconfig/network-scripts/ifcfg-{{ nic }}
+{% endfor %}
 {% if (version.split('.')[1]|int >= 8) %}
       - contents:
-          source: data:text/plain;charset=utf-8;base64,{{ lookup('template', 'ocp4-lab.nm.conf.j2', template_vars=dict(item=nic)) | b64encode }}
+          source: data:text/plain;charset=utf-8;base64,{{ lookup('template', 'ocp4-lab.nm.conf.j2', template_vars=dict(disable_nics=disable_nics)) | b64encode }}
         filesystem: root
         mode: 0644
-        path: /etc/NetworkManager/conf.d/99-disable-nics-{{ nic }}.conf
+        path: /etc/NetworkManager/conf.d/99-disable-nics.conf
 {% endif %}
-{% endfor %}
