'else' for inline if-expression

--- a/ansible-ipi-install/roles/shared-labs-prep/templates/ocp4-lab.nm.conf.j2
+++ b/ansible-ipi-install/roles/shared-labs-prep/templates/ocp4-lab.nm.conf.j2
@@ -1,2 +1,2 @@
 [keyfile]
-unmanaged-devices={% for nic in disable_nics %}interface-name:{{ nic }}{{ ";" if not loop.last }}{% endfor %}
+unmanaged-devices={% for nic in disable_nics %}interface-name:{{ nic }}{{ ";" if not loop.last else "" }}{% endfor %}
