Enable bmh firmware options
Signed-off-by: Jose Castillo Lema <josecastillolema@gmail.com>

--- a/ansible-ipi-install/roles/scale-worker/templates/bare-metal-host.yaml.j2
+++ b/ansible-ipi-install/roles/scale-worker/templates/bare-metal-host.yaml.j2
@@ -13,7 +13,19 @@ spec:
   bootMACAddress: "{{ item.prov_mac }}"
 {% if bootmode is defined and bootmode == 'legacy' %}
   bootMode: legacy
-{% endif %}  
+{% endif %}
+{% if multithread is defined or sriov is defined or virtualization is defined %}
+  firmware:
+{% if multithread is defined %}
+    simultaneousMultithreadingEnabled: {{ multithread=true }}
+{% endif %}
+{% if sriov is defined %}
+    sriovEnabled: {{ sriov }}
+{% endif %}
+{% if virtualization is defined %}
+    virtualizationEnabled: {{ virtualization }}
+{% endif %}
+{% endif %}
   userData:
     name: worker-user-data
     namespace: openshift-machine-api
