--- a/ansible-ipi-install/roles/shared-labs-prep/templates/ocp4-lab.udev-pubnics.rules.j2
+++ b/ansible-ipi-install/roles/shared-labs-prep/templates/ocp4-lab.udev-pubnics.rules.j2
@@ -1,3 +1,3 @@
 {% for nic in disable_nics  %}
-ACTION=="add", SUBSYSTEM=="net", ENV{INTERFACE}=="{{ nic }}", RUN+="/bin/sh -c 'echo 1 > /sys$DEVPATH/device/remove'"
+ACTION=="add", SUBSYSTEM=="net", ENV{INTERFACE}=="{{ nic }}", RUN+="/bin/sh -c 'echo 1 > /sys$env{DEVPATH}/device/remove'"
 {% endfor %}
